--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>HomeAccounting</title>
   <base href="/">
-
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title>Домашняя бухгалтерия | Вход</title>
+  <link rel="stylesheet" href="/src/assets/vendor.css">
+  <link rel="stylesheet" href="/src/assets/theme.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
